--- a/src/app/launch-view/launch-view.component.html
+++ b/src/app/launch-view/launch-view.component.html
@@ -131,10 +131,36 @@
 
     <button
       (click)="uploadFiles()"
-      class="bumped bg-gray-100 rounded-full w-full py-2 text-xl flex justify-center"
+      class="bumped rounded-full w-full py-2 text-xl flex justify-center h-[50px]"
+      [ngClass]="sending_images ? 'bg-gray-200 ' : 'bg-gray-100'"
     >
-      <span class="p-0.5 font-bold">Téléverser</span>
-      <i class="material-icons !text-2xl px-2">send</i>
+      <span *ngIf="!sending_images">
+        <span class="p-0.5 font-bold">Téléverser</span>
+        <i class="material-icons !text-2xl px-2">send</i>
+      </span>
+
+      <span *ngIf="sending_images" class="m-auto text-center">
+        <svg
+          class="animate-spin -ml-1 mr-3 h-5 w-5 text-blue-300"
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+        >
+          <circle
+            class="opacity-25"
+            cx="12"
+            cy="12"
+            r="10"
+            stroke="currentColor"
+            stroke-width="4"
+          ></circle>
+          <path
+            class="opacity-75"
+            fill="currentColor"
+            d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+          ></path>
+        </svg>
+      </span>
     </button>
   </div>
 </div>
