--- a/src/app/result-view/result-view.component.html
+++ b/src/app/result-view/result-view.component.html
@@ -47,7 +47,9 @@
           </div>
 
           <div
-            [ngClass]="selected_result != undefined ? 'h-[500px] ' : 'h-[0px]'"
+            [ngClass]="
+              selected_result != undefined ? 'h-[500px] ' : 'h-[550px]'
+            "
             class="bg-gray-200 relative overflow-hidden pressed rounded-lg text-gray-500 my-3"
           >
             <div
@@ -125,7 +127,6 @@
 
           <div
             *ngIf="selected_result == undefined"
-            #elseBlock
             class="block text-center h-full"
           >
             <p class="text-lg">Pas de tâche selectionnée</p>
