--- a/src/app/result-view/result-view.component.html
+++ b/src/app/result-view/result-view.component.html
@@ -122,9 +122,7 @@
               <div class="border-r-[1px] border-gray-300"></div>
               <div class="px-3">
                 <p>Noeud: {{ selected_result.node_id }}</p>
-                <p>
-                  total_consumption: {{ selected_result.total_consumption_kwh }}
-                </p>
+                <p>total_consumption: {{ consommation_totale }}</p>
                 <p>
                   total_production: {{ selected_result.total_production_kwh }}
                 </p>
