--- a/src/app/server-view/server-view.component.html
+++ b/src/app/server-view/server-view.component.html
@@ -60,7 +60,7 @@
           <p>{{ jobsStatus?.number_of_running_jobs || "0" }} tâche en cours</p>
           <p class="absolute font-bold right-0 top-0 p-1">
             total:
-            {{ getTotalNodesConsumption() }}W
+            {{ totalNodesConsumption }}W
           </p>
         </div>
       </div>
