fix: :zap: Fix graphs

--- a/src/app/result-view/result-view.component.html
+++ b/src/app/result-view/result-view.component.html
@@ -67,27 +67,32 @@
                 Charger le modèle
               </button>
 
-              <div *ngIf="wait_loading_model" class="m-auto text-center">
-                <svg
-                  class="animate-spin -ml-1 mr-3 h-5 w-5 text-white"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                >
-                  <circle
-                    class="opacity-25"
-                    cx="12"
-                    cy="12"
-                    r="10"
-                    stroke="currentColor"
-                    stroke-width="4"
-                  ></circle>
-                  <path
-                    class="opacity-75"
-                    fill="currentColor"
-                    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
-                  ></path>
-                </svg>
+              <div
+                *ngIf="wait_loading_model"
+                class="absolute flex top-0 left-0 w-full h-full"
+              >
+                <div class="m-auto text-center">
+                  <svg
+                    class="animate-spin -ml-1 mr-3 h-5 w-5 text-white"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                  >
+                    <circle
+                      class="opacity-25"
+                      cx="12"
+                      cy="12"
+                      r="10"
+                      stroke="currentColor"
+                      stroke-width="4"
+                    ></circle>
+                    <path
+                      class="opacity-75"
+                      fill="currentColor"
+                      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                    ></path>
+                  </svg>
+                </div>
               </div>
             </div>
             <canvas
@@ -138,10 +143,41 @@
           </div>
 
           <div
-            class="overflow-hidden max-h-[100px] relative"
-            [ngClass]="selected_result != undefined ? 'h-[100px]' : 'h-[0px]'"
+            class="overflow-hidden max-h-[200px] relative"
+            [ngClass]="selected_result != undefined ? 'h-[200px]' : 'h-[0px]'"
           >
-            <div id="chart-consumption"></div>
+            <div
+              id="chart-consumption"
+              [ngClass]="wait_loading_graph ? 'blur-[1px]' : ''"
+            ></div>
+
+            <div
+              *ngIf="wait_loading_graph"
+              class="absolute flex top-0 left-0 w-full h-full"
+            >
+              <div class="m-auto text-center">
+                <svg
+                  class="animate-spin ml-1 mt-5 mr-3 h-5 w-5 text-blue-300"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                >
+                  <circle
+                    class="opacity-25"
+                    cx="12"
+                    cy="12"
+                    r="10"
+                    stroke="currentColor"
+                    stroke-width="4"
+                  ></circle>
+                  <path
+                    class="opacity-75"
+                    fill="currentColor"
+                    d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                  ></path>
+                </svg>
+              </div>
+            </div>
           </div>
         </div>
       </div>
