--- a/src/app/server-view/server-view.component.html
+++ b/src/app/server-view/server-view.component.html
@@ -118,13 +118,45 @@
         </div>
 
         <div
-          class="overflow-hidden pt-3"
+          class="overflow-hidden pt-3 relative"
           [ngClass]="
             selected_job != undefined ? 'max-h-[400px]' : 'max-h-[0px]'
           "
         >
           <p class="text-gray-500">Consommation en temps réel (en Watt)</p>
-          <div id="chart-server" class="min-h-[100px]"></div>
+
+          <div
+            id="chart-server"
+            [ngClass]="wait_loading_graph ? 'blur-[1px]' : ''"
+          ></div>
+
+          <div
+            *ngIf="wait_loading_graph"
+            class="absolute flex top-0 left-0 w-full h-full"
+          >
+            <div class="m-auto text-center">
+              <svg
+                class="animate-spin ml-1 mt-5 mr-3 h-5 w-5 text-blue-300"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+              >
+                <circle
+                  class="opacity-25"
+                  cx="12"
+                  cy="12"
+                  r="10"
+                  stroke="currentColor"
+                  stroke-width="4"
+                ></circle>
+                <path
+                  class="opacity-75"
+                  fill="currentColor"
+                  d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                ></path>
+              </svg>
+            </div>
+          </div>
         </div>
       </div>
     </div>
