fix: :zap: Fix consumption values in W and graphs optimisation

--- a/src/app/result-view/result-view.component.html
+++ b/src/app/result-view/result-view.component.html
@@ -127,9 +127,9 @@
               <div class="border-r-[1px] border-gray-300"></div>
               <div class="px-3">
                 <p>Noeud: {{ selected_result.node_id }}</p>
-                <p>total_consumption: {{ consommation_totale }}</p>
+                <p>total_consumption: {{ consommation_totale }} W</p>
                 <p>
-                  total_production: {{ selected_result.total_production_kwh }}
+                  total_production: {{ selected_result.total_production_kwh }} W
                 </p>
               </div>
             </div>
